--- a/resources/fxml/CustomerMain.fxml
+++ b/resources/fxml/CustomerMain.fxml
@@ -15,19 +15,21 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-            prefHeight="540.0" prefWidth="960.0" styleClass="main-root" 
+            prefHeight="540.0" prefWidth="960.0" 
+            styleClass="main-root"
+            stylesheets="@../css/style.css"
             xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" 
             fx:controller="controllers.CustomerMainController">
    
    <!-- TOP: Welcome bar -->
    <top>
-      <HBox alignment="CENTER_LEFT" prefHeight="60.0" spacing="20.0" styleClass="top-bar" 
-            BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_LEFT" prefHeight="60.0" spacing="20.0" 
+            styleClass="top-bar" BorderPane.alignment="CENTER">
          <padding>
             <Insets left="20.0" right="20.0" />
          </padding>
          <children>
-            <Label fx:id="usernameLabel" text="Welcome, Customer" textFill="#2c3e50">
+            <Label fx:id="usernameLabel" text="Welcome, Customer">
                <font>
                   <Font name="Arial Bold" size="16.0" />
                </font>
@@ -45,17 +47,20 @@
    
    <!-- LEFT: Menu -->
    <left>
-      <VBox prefHeight="480.0" prefWidth="200.0" spacing="10.0" styleClass="left-menu" 
-            BorderPane.alignment="CENTER">
+      <VBox prefHeight="480.0" prefWidth="200.0" spacing="10.0" 
+            styleClass="left-menu" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
          </padding>
          <children>
             <!-- Search Section -->
-            <Label text="🔍 Search" textFill="WHITE">
+            <Label text="🔍 Search">
                <font>
                   <Font name="Arial Bold" size="14.0" />
                </font>
+               <style>
+                  -fx-text-fill: white;
+               </style>
             </Label>
             
             <TextField fx:id="searchField" promptText="Type here..." styleClass="search-field">
@@ -74,13 +79,16 @@
             <Separator />
             
             <!-- Menu Label -->
-            <Label text="Quick Menu" textFill="WHITE">
+            <Label text="Quick Menu">
                <font>
                   <Font name="Arial Bold" size="14.0" />
                </font>
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
+               <style>
+                  -fx-text-fill: white;
+               </style>
             </Label>
             
             <!-- Menu Buttons -->
@@ -120,12 +128,12 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <children>
-                  <Label text="🎉 Free Delivery" textFill="#27ae60">
+                  <Label text="🎉 Free Delivery" textFill="WHITE">
                      <font>
                         <Font name="Arial Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label text="Orders over 200₺" textFill="#7f8c8d">
+                  <Label text="Orders over 20₺" textFill="WHITE">
                      <font>
                         <Font name="Arial" size="10.0" />
                      </font>
@@ -188,8 +196,8 @@
    
    <!-- BOTTOM: Add to Cart -->
    <bottom>
-      <HBox alignment="CENTER" prefHeight="70.0" spacing="15.0" styleClass="bottom-bar" 
-            BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="70.0" spacing="15.0" 
+            styleClass="bottom-bar" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
          </padding>
